--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -285,33 +285,33 @@
         SKILLS & INTERESTS
       </h3>
       <div class="profile-form__field search">
-        <h3>Skills <span *ngIf="skills.length > 0" class="count">{{skills.length}}</span></h3>
+        <h3>Skills <span *ngIf="userSkillsDataList.length > 0" class="count">{{userSkillsDataList.length}}</span></h3>
         <mat-form-field appearance="standard" class="search">
           <mat-icon matSuffix>search</mat-icon>
           <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteSkills" [formControl]="skillsAndInterestsForm.controls.skills">
           <mat-autocomplete #autocompleteSkills="matAutocomplete" (closed)="blurSkillSearchField('skills')">
-            <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill.skill" (onSelectionChange)="addSkills(autocomplete_skill.skill)">
+            <mat-option *ngFor="let autocomplete_skill of autocomplete_skills" [value]="autocomplete_skill.skill" (onSelectionChange)="addSkills(autocomplete_skill)">
               <span>{{autocomplete_skill.skill}}</span>
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-        <div *ngIf="skills.length > 0" class="skills">
-          <simple-tag *ngFor="let skill of skills; let i = index" type="gray" title="{{skills[i].skill}}" ellipseTag="true" value="{{skills[i].proficieny}}"></simple-tag>
+        <div *ngIf="userSkillsDataList.length > 0" class="skills">
+          <simple-tag *ngFor="let skillData of userSkillsDataList; let i = index" type="gray" title="{{userSkillsDataList[i].skill}}" ellipseTag="true" value="{{userSkillsDataList[i].skill_level}}"></simple-tag>
         </div>
       </div>
       <div class="profile-form__field search">
-        <h3>Interests <span *ngIf="interests.length > 0" class="count">{{interests.length}}</span></h3>
+        <h3>Interests <span *ngIf="userInterestsDataList.length > 0" class="count">{{userInterestsDataList.length}}</span></h3>
         <mat-form-field appearance="standard" class="search">
           <mat-icon matSuffix>search</mat-icon>
           <input matInput placeholder="Search skills" type="text" [matAutocomplete]="autocompleteInterests" [formControl]="skillsAndInterestsForm.controls.interests">
           <mat-autocomplete #autocompleteInterests="matAutocomplete" (closed)="blurSkillSearchField('interests')">
-            <mat-option *ngFor="let autocomplete_interest of autocomplete_interests" [value]="autocomplete_interest.interest" (onSelectionChange)="addInterests(autocomplete_interest.interest)">
+            <mat-option *ngFor="let autocomplete_interest of autocomplete_interests" [value]="autocomplete_interest.interest" (onSelectionChange)="addInterests(autocomplete_interest)">
               <span>{{autocomplete_interest.interest}}</span>
             </mat-option>
           </mat-autocomplete>
         </mat-form-field>
-        <div *ngIf="interests.length > 0" class="skills">
-          <simple-tag *ngFor="let interest of interests; let i = index" type="gray" title="{{interests[i]}}"></simple-tag>
+        <div *ngIf="userInterestsDataList.length > 0" class="skills">
+          <simple-tag *ngFor="let interest of userInterestsDataList; let i = index" type="gray" title="{{userInterestsDataList[i].interest_name}}"></simple-tag>
         </div>
       </div>
     </div>
