Update Login Page - implement Formgroup - implement RemeberMe functionality

--- a/client/src/app/components/action-button/action-button.component.html
+++ b/client/src/app/components/action-button/action-button.component.html
@@ -1,12 +1,12 @@
-<button *ngIf="type==='raised'" mat-raised-button [color]="color">
+<button *ngIf="type==='raised'" mat-raised-button [color]="color" [disabled]="disabled">
   {{title}}
 </button>
-<button *ngIf="type==='stroked'" mat-stroked-button [color]="color">
+<button *ngIf="type==='stroked'" mat-stroked-button [color]="color" [disabled]="disabled">
   {{title}}
 </button>
-<button *ngIf="type==='text'" mat-button disableRipple="true" [color]="color">
+<button *ngIf="type==='text'" mat-button disableRipple="true" [color]="color" [disabled]="disabled">
   {{title}}
 </button>
-<button *ngIf="type==='flat'" mat-flat-button [color]="color">
+<button *ngIf="type==='flat'" mat-flat-button [color]="color" [disabled]="disabled">
   {{title}}
 </button>
