--- a/client/src/app/pages/login/login.component.html
+++ b/client/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
       <span>©2019 <a href="#">yourcareerfair.com</a> | Cookies, Privacy and Terms</span>
     </div>
   </div>
-  <div class="container__right">
+  <div class="container__right" [formGroup]="loginForm">
     <div class="row__user_roles">
       <span class="user_role" [class.active]="checkUserRole('applicant')" (click)="switchRole('applicant')">I’M AN APPLICANT<div class="active-border"></div></span>
       <span class="user_role" [class.active]="checkUserRole('recruiter')" (click)="switchRole('recruiter')">I’M A RECRUITER<div class="active-border"></div></span>
@@ -20,17 +20,17 @@
       <mat-form-field appearance="fill">
         <mat-label>Email Address</mat-label>
         <mat-icon matPrefix>mail_outline</mat-icon>
-        <input matInput placeholder="Email Address" type="email" [formControl]="emailAddress">
-        <mat-icon matSuffix *ngIf="emailAddress.valid">done</mat-icon>
-        <mat-icon matSuffix class="error-field" *ngIf="!emailAddress.valid && emailAddress.touched">close</mat-icon>
+        <input matInput placeholder="Email Address" type="email" [formControl]="loginForm.controls.emailAddress">
+        <mat-icon matSuffix *ngIf="loginForm.controls.emailAddress.valid">done</mat-icon>
+        <mat-icon matSuffix class="error-field" *ngIf="!loginForm.controls.emailAddress.valid && loginForm.controls.emailAddress.touched">close</mat-icon>
       </mat-form-field>
     </div>
     <div class="row__form last">
       <mat-form-field appearance="fill">
         <mat-label>Password</mat-label>
         <mat-icon matPrefix>lock_outline</mat-icon>
-        <input matInput placeholder="Password" type="password" [formControl]="password">
-        <mat-icon matSuffix class="error-field" *ngIf="!password.valid && password.touched">close</mat-icon>
+        <input matInput placeholder="Password" type="password" [formControl]="loginForm.controls.password">
+        <mat-icon matSuffix class="error-field" *ngIf="!loginForm.controls.password.valid && loginForm.controls.password.touched">close</mat-icon>
       </mat-form-field>
     </div>
     <div class="row__checkbox">
@@ -38,7 +38,7 @@
       <a mat-button disableRipple="true" routerLink="/login">Forgot Password?</a>
     </div>
     <div class="row__buttons">
-      <action-button type="flat" title="Login Now" color="primary" (click)="login()" disabled="password.valid"></action-button>
+      <action-button type="flat" title="Login Now" color="primary" (click)="login()" [disabled]="!loginForm.valid"></action-button>
       <action-button type="stroked" title="Create New Account" (click)="navigateToSignUp() "></action-button>
     </div>
     <p>Or you can join with</p>
