--- a/client/src/app/pages/create-profile/create-profile.component.scss
+++ b/client/src/app/pages/create-profile/create-profile.component.scss
@@ -251,7 +251,7 @@ p {
             padding: 0;
             @include flex(row, center, flex-start);
             action-button {
-              max-width: 150px;
+              min-width: 150px;
             }
           }
           &.search {
@@ -285,13 +285,16 @@ p {
             }
           }
           action-button {
-            max-width: 150px;
+            min-width: 150px;
           }
           mat-form-field {
             width: 100%;
             img {
               width: 30px;
               height: 30px;
+            }
+            input.hide {
+              display: none;
             }
           }
         }
