Update Major and Focus Major Fields

--- a/client/src/app/pages/create-profile/create-profile.component.html
+++ b/client/src/app/pages/create-profile/create-profile.component.html
@@ -192,8 +192,8 @@
           <mat-form-field class="bg-transparent" appearance="fill">
             <mat-label>Major</mat-label>
             <input matInput placeholder="Major" type="text" [matAutocomplete]="autocompleteMajor" [formControl]="educationFormArray.controls[i].controls.major">
-            <mat-icon matSuffix *ngIf="educationFormArray.controls[i].controls.major.valid && onCheckMajorValidation(i, false)">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!educationFormArray.controls[i].controls.major.valid || !onCheckMajorValidation(i, false)) && educationFormArray.controls[i].controls.major.touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="educationFormArray.controls[i].controls.major.value && checkMajorValidation(i, false)">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.controls[i].controls.major.value && !checkMajorValidation(i, false) && educationFormArray.controls[i].controls.major.touched">close</mat-icon>
             <mat-autocomplete #autocompleteMajor="matAutocomplete" (closed)="onBlurMajor(i)">
               <mat-option *ngFor="let autocomplete_major of autocomplete_majors[i]" [value]="autocomplete_major.major_name" (onSelectionChange)="onSelectMajor(i, autocomplete_major)">
                 <span>{{autocomplete_major.major_name}}</span>
@@ -203,10 +203,10 @@
         </div>
         <div class="profile-form__field">
           <mat-form-field class="bg-transparent" appearance="fill">
-            <mat-label>Focus Major</mat-label>
+            <mat-label>Focus</mat-label>
             <input matInput placeholder="Focus Major" type="text" [matAutocomplete]="autocompleteFocusMajor" [formControl]="educationFormArray.controls[i].controls.focus_major">
-            <mat-icon matSuffix *ngIf="educationFormArray.controls[i].controls.focus_major.valid && onCheckMajorValidation(i, true)">done</mat-icon>
-            <mat-icon matSuffix class="error-field" *ngIf="(!educationFormArray.controls[i].controls.focus_major.valid || !onCheckMajorValidation(i, true)) && educationFormArray.controls[i].controls.focus_major.touched">close</mat-icon>
+            <mat-icon matSuffix *ngIf="educationFormArray.controls[i].controls.focus_major.value && checkMajorValidation(i, true)">done</mat-icon>
+            <mat-icon matSuffix class="error-field" *ngIf="educationFormArray.controls[i].controls.focus_major.value && !checkMajorValidation(i, true) && educationFormArray.controls[i].controls.focus_major.touched">close</mat-icon>
             <mat-autocomplete #autocompleteFocusMajor="matAutocomplete" (closed)="onBlurFocusMajor(i)">
               <mat-option *ngFor="let autocomplete_focus_major of autocomplete_focus_majors[i]" [value]="autocomplete_focus_major.major_name" (onSelectionChange)="onSelectFocusMajor(i, autocomplete_focus_major)">
                 <span>{{autocomplete_focus_major.major_name}}</span>
@@ -250,18 +250,18 @@
           </mat-form-field>
         </div>
         <div class="profile-form__field btn">
-          <action-button title="Remove" color="warn" (click)="onRemoveEducationFormGroup(i)"></action-button>
+          <action-button title="Remove" color="warn" (click)="onRemoveEducationData(i)"></action-button>
         </div>
         <div class="profile-form__field border">
         </div>
       </ng-container>
       <div class="profile-form__field btn">
-        <action-button type="stroked" title="Add Education Info" (click)="addEducationFormGroup()"></action-button>
+        <action-button type="stroked" title="Add Education Info" (click)="onAddEducationData()" [disabled]="!(educationFormArray.valid && checkAllMajorValidation())"></action-button>
       </div>
     </div>
   </div>
   <div class="container__full">
-    <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(educationFormArray.valid && onCheckAllMajorValidation())"></action-button>
+    <action-button class="btn-next" type="flat" title="Next" color="primary" (click)="goToNextPage()" [disabled]="!(educationFormArray.valid && checkAllMajorValidation())"></action-button>
   </div>
 </div>
 
